--- a/front-end/src/styles/globals.css
+++ b/front-end/src/styles/globals.css
@@ -3,6 +3,23 @@
 @tailwind utilities;
 
 
+/* Estilos personalizados para a barra de rolagem */
+.scrollbar-custom::-webkit-scrollbar {
+  width: 8px; /* Largura da barra de rolagem */
+  border-radius: 999px; /* Torna a barra de rolagem redonda */
+}
+
+.scrollbar-custom::-webkit-scrollbar-thumb {
+  background-color: #0C9B00; /* Altera a cor da barra de rolagem */
+  border-radius: 20px; /* Remove a borda */
+}
+
+.scrollbar-custom::-webkit-scrollbar-track {
+  background-color: #ccc; /* Altera a cor de fundo da área da barra de rolagem */
+  border: none; /* Remove a borda */
+}
+
+
 *{
   margin: 0;
   padding: 0;
